Fix focus problem on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,17 @@ html {
   line-height: 0;
 }
 
+.ResellPriceContainer {
+  display: flex;
+  width: 90%;
+  height: 1.8rem;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  line-height: 0;
+  margin-top: 1.5rem;
+}
+
 .Paragraph {
   margin: 0.4rem 0.3rem 0.4rem 0;
   font-size: 0.9rem;
